review lit review

--- a/04-Sigles_Abrev.tex
+++ b/04-Sigles_Abrev.tex
@@ -33,6 +33,7 @@
   \acro{URL}{Uniform Resource Locator}
   \acro{URI}{Uniform Resource Identifier}
   \acro{TC}{Transport Collectif}
+  \acro{ESRI}{Environmental Systems Research Institute, Inc.}
 \end{acronym}
 %
 \begin{longtable}{lp{5in}}
@@ -58,6 +59,7 @@ HTTP    & HyperText Transfer Protocol                                           
 REST    & REpresentational State Transfer                                               \\
 URL     & Uniform Resource Locator                                                      \\
 URI     & Uniform Resource Identifier                                                   \\
+ESRI    & Environmental Systems Research Institute, Inc. \\
 $F_{men}$ & Facteur de pondération ménage dans l'enquête OD                             \\
 $v_{men}$ & Nombre de véhicules d'un ménage dans l'enquête OD                           \\
 $T_{men}$ & Variable binaire qui indique la première entrée d'un ménage dans la table de déplacements de l'enquête OD \\
