--- a/05-Introduction.tex
+++ b/05-Introduction.tex
@@ -65,11 +65,11 @@ Malgré les définitions posées à la section \ref{sec:typologie_stationnement}
 \subsection{Données}
 
 L'un des principaux problèmes à la mise en place d'un inventaire relate aux données. Des données sur l'offre de stationnement existent sous forme directe (plans de constructions, comptages) ou indirectes (panneaux de stationnements, données sur les bornes fontaines et les entrées charretières, codes d'urbanisme). Des données sur l'utilisation de stationnement existent aussi sous forme directe(relevés de transactions de parcomètres) ou indirectes(résultats d'enquête OD).\par
-La disponibilité, la complétude, la précision et l'hétérogénéité des formats forment des barrières à l'exploitation des données qui existent. D'autre part, des besoins variables d'agrégation pour différentes utilisations de la donnée rendent une procédure universelle de traitement et de stockage difficile à élaborer. Un portrait juste et adapté aux besoins d'une intervention, soit elle politique, de terrain ou académique, est donc difficile à rendre.
+La disponibilité, la complétude, la précision et l'hétérogénéité des formats forment des barrières à l'exploitation des données. D'autre part, des besoins variables d'agrégation pour différentes utilisations de la donnée rendent une procédure universelle de traitement et de stockage difficile à élaborer. Un portrait juste et adapté aux besoins d'une intervention, soit elle politique, de terrain ou académique, est donc difficile à rendre.
 
 \subsection{Enjeux}
 
-\textcite{bourdeau_methodologie_2014} mentionne les enjeux reliés à la provision de  stationnement et ses effets sur la mobilité. À cela s'ajoutent trois formes d'arbitrage; une dimension spatiale entre différentes formes de mobilités qui sont en compétition pour un espace limité, particulièrement dans les milieux urbains denses avec un cadre bâti patrimonial et des besoins croissants sur ce même espace ; la deuxième est politique où l'offre de stationnement est perçue comme un enjeu de taille dans l'espace politique \parencite{mattioli_political_2020,button_political_2006}, sans réellement que le débat ne soit cadré par des données ; le troisième est économique où la provision de stationnement par mandat gouvernemental réduit la viabilité financière de projets de construction du fait de la quantité de terre et de construction supplémentaire imposée par ces mandats. De plus, les coûts pour les infrastructures routières qui doivent contourner ces stationnements \og{spatio-phages} \fg{} ainsi que la dilution de la base foncière censée payer ces infrastructures sont une double pénalité pour les finances des municipalités. 
+\textcite{bourdeau_methodologie_2014} mentionne les enjeux reliés à la provision de  stationnement et ses effets sur la mobilité. À cela s'ajoutent trois formes d'arbitrage; une dimension spatiale entre différentes utilisation du sol qui sont en compétition pour un espace limité, particulièrement dans les milieux urbains denses avec un cadre bâti patrimonial et des besoins croissants sur ce même espace ; la deuxième est politique où l'offre de stationnement est perçue comme un enjeu de taille dans l'espace politique \parencite{mattioli_political_2020,button_political_2006}, sans réellement que le débat ne soit cadré par des données ; le troisième est économique où la provision de stationnement par mandat gouvernemental réduit la viabilité financière de projets de construction du fait de la quantité de terre et de construction supplémentaire imposée par ces mandats \parencite{cutter_parking_2012,jung_who_2011}. De plus, la littérature indique que la densité tend à réduire les coûts de services pour les municipalité \parencite{garrido-jimenez_municipal_2018,metro_vancouver_regional_planning_cost_2023,blais_perverse_2024}, même si certains sont en désaccord \parencite{ladd_population_1992,windsor_critique_1979}.
 %%% 
 % ETAT FINAL DESIRE
 %%%%%
@@ -117,11 +117,10 @@ La disponibilité, la complétude, la précision et l'hétérogénéité des for
 Cette thèse aura pour but de développer un système d'information capable de générer, stocker, valider et disséminer aux parties prenantes des estimés sur la capacité, la localisation et la tarification de places de stationnement hors-rue d'un territoire. Les sous-objectifs suivants sont poursuivis :
 
 \begin{enumerate}
-\item Développer un dispositif qui permet d'entreposer la réglementation sur le stationnement des municipalités 
+\item Développer une structure de données qui permet de représenter les règlements de zonage portant sur la quantité de stationnement à fournir
 \item Développer une méthode d'inventaire du stationnement hors-rue basée sur la réglementation du point 1 et les données de rôle foncier.
-\item Créer un outil automatisé d'analyse d'image satellite pour recenser le stationnement hors-rue basé sur des méthodes d'apprentissage machine.
 \item Définir une structure de base de données qui permet d'inventorier le stationnement et de représenter visuellement la capacité de stationnement sur le territoire
-\item Valider les différentes méthodes d'estimations contre une réalité terrain pour assurer la significativité statistique des estimés sur une variété de contexte géographiques et d'utilisation du sol
+\item Valider la d'estimations contre une réalité terrain pour assurer la significativité statistique des estimés sur une variété de contextes géographiques et d'utilisations du sol
 \item Développer un interface facile d'utilisation qui permet à un praticien d'évaluer la capacité et de corriger les estimés au besoin
 \item Développer la structure d'un interface de programmation d'application pour que d'autres logiciels puissent valoriser la donnée dans les études de la mobilité
 \end{enumerate}
@@ -131,6 +130,6 @@ Cette thèse aura pour but de développer un système d'information capable de g
 %%
 \section{Plan du mémoire}  % 0.5 page
 
-Le mémoire se divisera en 5 chapitres. Le chapitre \ref{sec:Introduction} est une introduction qui présente le sujet, ses problématiques et la pertinence de l'étude. Le chapitre \ref{sec:RevLitt} est une revue de littérature sur les méthodes d'inventaire de places de stationnement, des coûts associés à la provision de différents types de stationnements hors-rue et aux effets de la variation de l'offre en capacité et tarifaire sur la mobilité des personnes. Le chapitre \ref{sec:Methodologie} portera sur les données disponibles et les méthodologies utilisées pour faire l'inventaire de l'ensemble des places de stationnement disponibles. Le chapitre \ref{sec:Resultats} présentera l'inventaire complété pour le stationnement dans la capitale nationale. Le chapitre \ref{sec:Conclusion} présentera une synthèse des travaux, les limitations de la méthode utilisée et de potentielles améliorations futures.
+Le mémoire se divisera en 5 chapitres. Le chapitre \ref{sec:Introduction} est une introduction qui présente le sujet, ses problématiques et la pertinence de l'étude. Le chapitre \ref{sec:RevLitt} est une revue de littérature sur les méthodes d'inventaire de places de stationnement, des coûts associés à la provision de différents types de stationnements hors-rue et aux effets de la variation de l'offre sur la mobilité des personnes. Le chapitre \ref{sec:Methodologie} portera sur les données disponibles et les méthodologies utilisées pour faire l'inventaire de l'ensemble des places de stationnement disponibles. Le chapitre \ref{sec:Resultats} présentera l'outil développé et l'inventaire complété pour le stationnement dans la capitale nationale. Le chapitre \ref{sec:Conclusion} présentera une synthèse des travaux, les limitations de la méthode utilisée et de potentielles améliorations futures.
 
 \clearpage
