--- a/06-1-Revue-stat-mobilite.tex
+++ b/06-1-Revue-stat-mobilite.tex
@@ -1,11 +1,25 @@
 \section{Stationnement: politiques, coûts et effets sur la mobilité}
   \subsection{Stationnement hors rue}
-  Selon \textcite{shoup_high_2005}, les minimums de stationnement ont vu le jour dans les années '50 en réponse à la croissance du parc automobile et pour assurer que les commerçants et citoyens internalisaient les coûts associés à l'automobile. Ce mécanisme réglementaire est encore omniprésent au Québec puisque seuls les arrondissements de Côte-des-Neiges , du Sud-Ouest, du Plateau Mont-Royal et du Centre-Ville de Montréal \parencite{arrondissement_cote-des-neiges_ville_de_montreal_reglement_2020,arrondissement_sud-ouest_ville_de_montreal_reglement_2020,arrondissement_ville-marie_ville_de_montreal_reglement_2018,arrondissement_plateau_mont-royal_ville_de_montreal_reglement_2015}. La ville de Québec a enlevé les requis minimums pour les logements dans certaines zones denses \parencite{ville_de_quebec_adoption_2024}.
-  \subsection{Coûts de provision}
-    Plusieurs coûts sont associés à la provision de stationnements, autant pour les individus que pour les collectivités locales ou de tierces parties plus difficiles à identifier dans le cas d'externalités. Cette section visera à identifier quels sont les coûts associés et qui les porte.
-
-    \subsubsection{Propriétaires fonciers et municipalités}
-      \textcite{blanc_effects_2014} ont estimé la valeur foncière de 6 villes américaines en évaluant la valeur foncière des bâtiments et des stationnements extérieurs. En comparant le tissu urbain entre 1950 et 2010, les auteurs ont estimé la différence de valeur foncière et de revenu entre les deux configurations. Dans certains cas, les municipalités avaient accepté de détruire leur centre-ville pour permettre le développement de tours à bureaux entourées de stationnements. Dans d'autres cas, les municipalités avaient largement conservé le tissu urbain d'avant-guerre. Dans tous les cas, le revenu foncier associé au stationnement était entre 5 et 10 fois moindre que le revenu associé aux bâtiments. L'étude est cependant associative puisqu'il est difficile d'isoler la nature causale entre la dilution du revenu foncier et la provision de stationnements, mais illustre les coûts d'opportunité associés à l'entreposage de véhicules personnels. \par
+   Les minimums de stationnement ont vu le jour dans les années '30 \parencite{shoup_high_2005}en réponse à la croissance du parc automobile et pour assurer que les commerçants et citoyens internalisaient les coûts associés à l'automobile. Ce mécanisme réglementaire est encore omniprésent au Québec puisque seuls les arrondissements de Côte-des-Neiges , du Sud-Ouest, du Plateau Mont-Royal et du Centre-Ville de Montréal \parencite{arrondissement_cote-des-neiges_ville_de_montreal_reglement_2020,arrondissement_sud-ouest_ville_de_montreal_reglement_2020,arrondissement_ville-marie_ville_de_montreal_reglement_2018,arrondissement_plateau_mont-royal_ville_de_montreal_reglement_2015}. La ville de Québec a enlevé les requis minimums pour les logements dans certaines zones denses \parencite{ville_de_quebec_adoption_2024}.
+    \subsection{Coûts de provision}
+    Plusieurs coûts sont associés à la provision de stationnements, autant pour les individus que pour les collectivités locales ou de tierces parties plus difficiles à identifier dans le cas d'externalités. Cette section visera à identifier quels sont les coûts associés et qui les porte.\par
+    Les requis de stationnement requièrent par mandat municipal qu'une partie de la structure ou du terrain soit dédié à l'entreposage de véhicules. Ce faisant, la règlementation impose des coûts qui peuvent varier selon la valeur relative de la terre, le coût du foncier à l'intérieur de la structure et l'offre de stationnement dans le quartier. 
+    Plusieurs études constatent que la provision de stationnement peut augmenter le coût des logements particulièrement lorsqu'il s'agit de logements à unités multiples. 
+    Plusieurs études utilisent des méthodes économétriques pour estimer le prix supplémentaire payé pour les logements en fonction de l'offre de stationnement \cite{jia_parking_1999,gabbe_hidden_2017,shah_impact_2024}, ont développé des modèles économiques pour estimer la manière dont les requis influencent les coûts de construction \parencite{lehe_how_2018,andersson_effect_2016}. D'autres utilisent des expériences naturelles (abrogation ou implémentation de minimums) pour déterminer si les requis de stationnement imposent des contraintes sur la quantité ou le prix des logements \parencite{li_parking_2014,smith_low-rise_1964}. D'autres encore utilisent des entrevues avec des développeurs immobiliers pour obtenir des estimés directs des coûts de construction \parencite{mcdonnell_minimum_2011,cudney_parking_2017}.\par
+    Ces coûts ne sont pas limité au développement résidentiel puisque des dynamiques similaires s'appliquent pour des développement commerciaux \parencite{franco_shadow_2020,cutter_parking_2012}. L'imposition de minimums de stationnement impose des coûts particulièrement dans les centre-villes. Cela mène à une réduction de la densité de construction, réduit les profits des développeurs et les amène potentiellement à développer dans des endroits excentrés où les coûts associés aux minimums de stationnement sont moindres. Différents requis d'urbanisme peuvent donc avoir un effet centrifuge sur le développement immobilier où les développeurs s'excentrent pour réduire le coût de la mise en conformité avec les règlements.\par
+    \textcite{stangl_parking_2019} donne un autre angle sur cette discussion en recensant le stationnement construit et en le comparant aux réductions des minimums que les développeurs ont obtenu. L'auteur constate que les développeurs immobiliers ne réduisent pas autant le stationnement qu'ils le pourraient pour minimiser leurs risques d'invendus. D'autre part, cette tendance est accrue dans les quartiers avec un tissu urbain dense avec de fortes contraintes de stationnement, où la valeur perçue du stationnement est plus élevée.  \par
+    Le stationnement accessible publiquement peut cependant offrir des bénéfices qui excèdent les coûts de construction. \textcite{cutter_iv_parking_2010} ont en effet constaté que la provision de stationnement public améliore plus les valeurs foncières que des stationnement privés. Ils cautionnent cependant qu'ils n'ont évalué que les externalités positives du stationnement public et non les potentielles externalités négatives. \textcite{olus_inan_spillover_2019} illustre aussi comment les minimums de stationnement peuvent être un outil de réglementation efficaces lorsqu'un lieu commercial détient un important pouvoir de marché en utilisant un modèle économique. Dans ce cas particulier, l'imposition d'un nombre minimum de places mène à une solution plus efficiente que les autres propositions pour limiter que le stationnement ne se défère dans les rues avoisinantes(tarification du stationnement sur-rue, interdictions, réglementation du tarif de stationnement de la propriété commerciale). Cette étude n'inclut cependant pas les coûts indirects associés à la mobilité des personnes ou aux infrastructures requises.\par
+    \subsection{Coûts liés à la réduction de la densité}
+    \textcite{ewing_characteristics_2008} identifie plusieurs causes pour l'étalement urbain constaté dans plusieurs pays développés. D'une part, l'augmentation des revenus des ménages, l'augmentation des vitesses de transport (particulièrement automobiles) ainsi que diverses politiques publiques favorables à l'étalement urbain généralement. À cela s'ajoutent des imperfections de marché, des dynamiques spéculatives sur les marchés fonciers, des incitatifs fractionnés entre les développeurs immobiliers et la population. Diverses subventions directes et indirectes au système de transport automobile par la construction d'infrastructures, les aides aux équipementiers et la socialisation des externalités, entre autre liées à la mortalité. \par
+    La provision de stationnement par mandat municipal est l'un des mécanismes par lesquels les coûts terminaux des déplacement automobiles sont socialisés à la population par des moyens pécuniaires(augmentation des  coûts des biens et services) ou temporels(congestion induite) \parencite{shoup_high_2005,manville_parking_2005,mccahill_parking_2014}. Or différents types de cadre bâti vont avoir des coûts de services différents. Différents types d'études ont essayé de quantifier cette influence: \begin{itemize}
+        \item  études d'ingénierie qui essaient d'inférer des coûts à partir d'unités de bases(mètre d’égout et de routes, services publics par capita) pour des archétypes de quartiers.
+        \item des études de croissance alternative qui regardent différents scénarios de croissance à l'échelle métropolitaine pour examiner les effets potentiels de scénarios sur les coûts de service
+        \item les analyses de régression qui prennent des données agrégées par municipalité et tirent des conclusion sur le coût relatif de différentes municipalités en essayant de prendre en compte des facteurs comme le niveau de service ou des différence socio-démographiques ou climatiques.
+    \end{itemize}
+    Les études d'ingénierie ne sont pas novatrices puisque les premières ont émergées dans les années 1930 \parencite{city_planning_board_report_1934} avec une première revue systématique en 1961 \parencite{mace_municipal_1961} qui concluait déjà que les niveaux de service et de taxation étaient différentiés et constataient que beaucoup des études faites à cette date étaient motivées a priori, menant à des conclusions dramatiques (et prédéterminées). L'étude la plus citée (et potentiellement controversée) demeure \textcite{real_estate_research_corporation_costs_1974,real_estate_research_corporation_costs_1974-1} qui fut la première à essayer de systématiquement comptabiliser les coûts de différents types de développement et des densités afférentes en utilisant une approche par archétypes. Cette étude trouvait déjà à l'époque d'importants gains en augmentant la densité des habitations. Elle fut cependant critiquée pour certaines erreurs méthodologiques car tout n'était pas tenu égal par ailleurs \parencite{windsor_critique_1979}, mais la critique trouvait quand même que les milieux plus denses étaient plus économes pour les finances publiques que l'alternative, postulant cependant que les dynamiques reliées à l'étalement urbain sont dues aux dynamiques du marché immobilier, des préférences de consommateurs et des élus tels qu'exprimés dans les codes d'urbanisme. \par
+    Plusieurs études économétriques tendent maintenant à supporter l'hypothèse que l'intensité de développement permet de réduire les coûts publics par capita \parencite{hortas-rico_does_2010,raghav_literature_2019} mais certains constatent un effet inverse à de très hautes densité du fait des demandes importantes sur l'infrastructure \parencite{goodman_fiscal_2019,ladd_population_1992,garrido-jimenez_municipal_2018}. Certaines études ne montrent cependant pas de relations entre la provision de service et l'intensité de l'utilsation du sol \parencite{holcombe_impact_2008,}\par
+    Plusieurs études d'ingénierie visant différents scénarios de développement alternatifs ont été complétées. La plus communément discutée dans le contexte canadien provient de Halifax \parencite{stantec_consulting_ltd_quantifying_2013}. Cette étude comptabilise les coûts en infrastructure routières, les réseaux publiques (eaux usées) et privés(électricité et gaz) ainsi que les services comme les pompiers, policiers écoles et bibliothèques et constate une réduction des coûts totaux lorsque le développement est focalisé au centre-ville plutôt qu'en périphérie. La commission de planification de Vancouver a obtenu des résultats similaires avec une étude moins approfondie \parencite{metro_vancouver_regional_planning_cost_2023}. D'autres études se sont focalisés sur les revenus totaux des municipalités et ont constaté que le stationnement conftirbuait moins aux coffre publics que des utilisation alternatives \parencite{blanc_effects_2014}. \par
+    Pour conclure, les minimums de stationnement sont un des mécanisme contributaires à la réduction des densité de constructions. Basé sur la majorité de la littérature, cette pratique augment les coûts de construction pour les résidents, les utilisateurs ainsi que les municipalités qui doivent fournir des services publics à ces terrains dont les revenus fonciers sont faibles par rapports aux usages alternatifs qu'on pourrait en faire si les règlements d'urbanisme ne l'empéchaient pas.
 
   \subsection{Effet de l'offre de stationnement sur la mobilité}
     \textcite{chester_parking_2015} constatent que la capacité de stationnement est la plus haute dans le centre de la ville, mais que la croissance du parc de stationnement a principalement lieu sur le périmètre de la région.  Ils constatent aussi que le parc de stationnement a cru plus vite que la capacité routière, mais a suivi l'offre de stationnement résidentielle.\par
@@ -17,14 +31,17 @@
     \textcite{currans_households_2023} crée un modèle de régression et une analyse de médiation pour lier l'effet de l'offre de stationnement résidentiel hors rue avec la motorisation et les kilomètres parcourus par ménage. Ils constatent que les ménages ayant des contraintes de stationnement (moins d'un stationnement par unité) parcourent 10-23\% moins de kilomètres à typologie de voisinage constante. Les auteurs encouragent la présence de plus de questions sur les conditions de stationnement dans les enquêtes ainsi qu'à la création d'un inventaire de stationnement. \par
     \textcite{mccahill_effects_2016} observe la relation entre la provision de stationnements avec la part modale de l'automobile sous le prisme du critère de Bradford-Hill pour inférer que la provision de stationnements est la cause probable de l'augmentation de la part modale de l'automobile. \hl{cet article est intéressant mais le critère est très sujet à interprétation}
 
+  
   \subsection{Allocation, tarification et ratissage}
     Une littérature économique riche existe sur les différents mécanismes d'allocation de places de stationnement qui est résumée par \textcite{inci_review_2015}, sur laquelle est largement basée cette section. Dès les premiers pas de la discipline, dans les années 50, la mise en place d'une tarification sur les infrastructures routières, variable dans le temps et l'espace, est identifiée comme une condition nécessaire pour réduire les externalités reliées au ratissage, la congestion et les externalités liées au transport urbain de personnes \parencite{vickrey_statement_1994}. Les tentatives les plus intéressantes d'instaurer un marché variable viennent de San Francisco et Seattle où des projets pilotes ont été implémentés. Les études portant sur ces deux pilotes ont trouvé que la demande est initialement inélastique, mais que le maintien de la politique amène des améliorations sur la disponibilité à long terme. \textcite{chatman_theory_2014} constatent que l'implémentation de SFPark, le programme de tarification variable de San Francisco, a eu des résultats mitigés. Bien que le taux d'occupation moyen, qui était l'indicateur utilisé pour faire varier la tarification,  ait été réduit à environ 80\%, le taux de disponibilité (le pourcentage de temps où au moins une place est disponible sur un tronçon) n'était pas sensible au prix avec les modalités politiques en place. Ainsi, l'imposition de prix plafond, la lenteur de l'adaptation du prix et le choix d'indicateur pour la tarification sont déterminants pour réduire les externalités liées à la recherche de stationnement. Cela amène un questionnement plus large sur la viabilité politique d'un système de tarification.\par
     \textcite{van_ommeren_real_2011} infèrent la propension à payer pour un stationnement des résidents d'Amsterdam en utilisant les préférences révélées par le choix d'achat de résidence. En utilisant des données de ventes de résidences et en capitalisant la différence de prix sur le temps d'attente pour un permis de stationnement résident, les auteurs estiment une propension à payer de 10€ par jour, bien au-dessus du prix réel de 0.40€ et bien en dessous des recettes possibles pour les places tarifées aux visiteurs qui paient 2.3€ par heure.\par
     \textcite{inci_review_2015} mentionne les éléments suivants comme manquants à la recherche: l'effet de la prévention de la fraude, l'économie politique du stationnement, les interactions entre véhicules stationnés et en mouvement et l'établissement de l'élasticité de la demande dans plusieurs contextes spacio-temporels. Il est intéressant de noter qu'aucune mention n'est faite des coûts d'opportunité infligés aux autres modes ou activités par le stationnement dans la revue économique.
 
+  
   \subsection{Utilisation de la capacité existante}
     \textcite{translink_2018_2019} a sondé les taux d'occupation des blocs-appartements et du stationnement sur rue dans la grande région de Vancouver. Pour l'échantillon donné, entre 30 et 40\% de la capacité de stationnement n'était pas utilisée. L'étude constate aussi que la demande de stationnement est plus faible chez les locataires que chez les propriétaires. Cela étant dit, l'étude ne calibre pas les résultats sur l'ensemble du parc immobilier et n'utilise pas de test statistique pour valider la significativité du résultat. La conception de l'étude n'a pas permis de quantifier les interactions entre le stationnement hors rue et sur rue pour les blocs appartements, mais indique qu'anecdotiquement, les praticiens ont constaté que les résidents utilisaient le stationnement sur rue plutôt qu'en sous-sol lorsqu'il n'y avait pas de restriction sur le stationnement sur rue. 
 
+  
   \subsection{Stationnement et utilisation du territoire}
     \textcite{chester_parking_2015} trouvent que 16\% de la région est utilisée pour le stationnement, plus que l'ensemble du réseau routier. D'autre part, le centre-ville a vu une forte croissance de stationnements en structure et souterrains où les valeurs de terrains sont hautes. Les auteurs concluent qu'il y a 3.3 places de stationnement par véhicule et que la majorité de la croissance du parc de stationnement a eu lieu entre 1950 et 1980.\par
     \textcite{davis_estimating_2010} estiment que 4.97\% de l'espace urbain est utilisé par le stationnement hors rue commerciale (sans compter les stationnements sur rue ou résidentiels). Ils estiment environ 1.8 places par voiture, 5.3 places par ménage et 1.7 places par adultes. À noter que l'indicateur ne mesure pas la même chose que \textcite{chester_parking_2015} puisque ce dernier inclut les stationnements sur rue et résidentiel.
