--- a/07-5-Inventaire-code-urbanisme.tex
+++ b/07-5-Inventaire-code-urbanisme.tex
@@ -274,7 +274,7 @@
         \end{figure}
         \FloatBarrier
         \clearpage
-    \subsection{Exemple 1: Clinique medicale} 
+    \subsubsection{Exemple 1: Clinique medicale} 
         Admettons un règlement qui requiert 1 place par salle de consultation  plus une place par employé plus une place par médecin ou une place par 20 mètres carrés, au plus contraignant. Les entrées dans la table reg\_stat\_empile seraient telles que montrées au tableau \ref{tab:ex_reg_stat_clinique}
         \begin{table}[h]
             \centering
@@ -352,7 +352,7 @@
         \end{figure}
         \FloatBarrier
         \clearpage
-    \subsection{Exemple 2: Logements} 
+    \subsubsection{Exemple 2: Logements} 
         Dans le cas d'un logement, les règlements changent souvent en fonction du nombre de logements au sein d'un même bâtiment. Dans ce cas hypothétique, le requis serait d'une case par logement pour des bâtiments de moins de 4 logements, 1.5 cases par logement pour les bâtiments entre 4 et 7 logements et 1.25 case par logement pour tout bâtiment de 8 logements ou plus. Dans ce cas, les entrées à la table seraient telles que montrées au tableau
         \begin{table}[h]
             \centering
@@ -394,7 +394,7 @@
         \end{figure}
         \FloatBarrier
         \clearpage
-    \subsection{Exemple 3: Lieux d'assemblée} 
+    \subsubsection{Exemple 3: Lieux d'assemblée} 
         Dans le cas de lieux d'assemblée, les requis peuvent être exprimés en fonction du nombre de sièges ou en fonction de l'espace au sol. Dans notre cas hypothétique, le requis serait un minimum d'une place par 7 sièges jusqu'à 800 sièges et d'un minimum de 1 place par 9 sièges pour toute place au-delà de 800 sièges. Un maximum  d'une place par 5 sièges est applicable au-delà de 500 sièges. Quand il n'y a pas de sièges, un requis d'une places par 10 mètres carrés est applicable sans maximum.
         \begin{table}[h]
             \centering
