--- a/2025_PaulCharbonneau_Memoire_MSc.tex
+++ b/2025_PaulCharbonneau_Memoire_MSc.tex
@@ -55,6 +55,7 @@
 %%
 %% Charge le module d'affichage graphique. / Loads the graphics package.
 \usepackage{graphicx}
+\usepackage[export]{adjustbox}
 \usepackage{epstopdf}  % Permet d'utiliser des .eps avec pdfLaTeX. / Allows using .eps with pdfLaTeX.
 \usepackage[normalem]{ulem}% Pour la commande \ul (souligné)
 %%
